--- a/Notebooks/dataloader.ipynb
+++ b/Notebooks/dataloader.ipynb
@@ -163,7 +163,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "llm-from-scratch",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
