--- a/Notebooks/transformer.ipynb
+++ b/Notebooks/transformer.ipynb
@@ -534,7 +534,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "llm-from-scratch",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
