--- a/Notebooks/train.ipynb
+++ b/Notebooks/train.ipynb
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "id": "b37abc19",
    "metadata": {},
    "outputs": [
@@ -748,8 +748,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "7ab72713",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate(model, idx, max_new_tokens, context_size, temperature = 0.0, top_k = None, eos_id =None):\n",
+    "    for _ in range(max_new_tokens):\n",
+    "\n",
+    "        idx_cond = idx[:, -context_size:]\n",
+    "        model.eval()\n",
+    "        with torch.no_grad():\n",
+    "            logits = model(idx_cond)\n",
+    "\n",
+    "        logits = logits[:,-1,:]\n",
+    "\n",
+    "        if top_k is not None:\n",
+    "            top_logits, _ = torch.topk(logits, top_k)\n",
+    "            min_val = top_logits[:,-1]\n",
+    "            logits = torch.where(\n",
+    "                logits<min_val,\n",
+    "                torch.tensor(float('-inf')).to(logits.device),\n",
+    "                logits\n",
+    "            )\n",
+    "\n",
+    "        if temperature>0.0:\n",
+    "            logits = logits/temperature\n",
+    "            probs = torch.softmax(logits, dim = -1)\n",
+    "\n",
+    "            idx_next = torch.multinomial(probs, num_samples=1)\n",
+    "\n",
+    "        else:\n",
+    "            idx_next = torch.argmax(logits, dim =-1, keepdim=True)\n",
+    "\n",
+    "        idx = torch.cat((idx, idx_next), dim = 1)\n",
+    "\n",
+    "    return idx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "5f012abf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Output text:\n",
+      " Every effort moves you not to work on surprise, a picture to face watching me by his knees\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "torch.manual_seed(123)\n",
+    "\n",
+    "token_ids = generate(\n",
+    "    model=model,\n",
+    "    idx=text_to_token_ids(\"Every effort moves you\", tokenizer),\n",
+    "    max_new_tokens=15,\n",
+    "    context_size=GPT_CONFIG_124M[\"context_length\"],\n",
+    "    top_k=25,\n",
+    "    temperature=1.4\n",
+    ")\n",
+    "\n",
+    "print(\"Output text:\\n\", token_ids_to_text(token_ids, tokenizer))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "663dc3bd",
    "metadata": {},
    "outputs": [],
    "source": []
